packages/widget/client/widget.css.less
.widget {
  overflow: hidden;
  position: relative;
  border: 0;
  cursor: default;
  border-radius: 3px;
  -webkit-box-shadow: 0.25em 0.25em 0.33em rgba(0, 0, 0, 0.07);
  box-shadow: 0.25em 0.25em 0.33em rgba(0, 0, 0, 0.07);
  background-color: white;
  color: #333;

  h1 {
    font-size: 32px;
    margin-top: 0;
    margin-bottom: 3px;
  }
  h2 {
    margin-top: 0.2em;
    font-size: 1.6em;
    margin-bottom: 0.4em;
  }
  h3 {
    margin-top: 0.2em;
    font-size: 1.4em;
    margin-bottom: 0.4em;
    color: #666;
  }



  .title-bar {
    width: 100%;
    background-color: rgba(236, 236, 236, 0.6);
    z-index: 10;
    cursor: move;
    white-space: nowrap;

    .widget-settings-helper{
    display: inline-block;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 0.7em;
    text-overflow: hidden;
    vertical-align: text-top;
    }
    .buttons {
      padding-left: 4px;
      padding-top: 1px;
      max-width: 60px;
      cursor: default;

      a {
        margin-left: 1px;
        color: #BABABA;

        &:hover, &:focus {
          text-decoration: none;
          color: #428BCA;
        }

        &.remove-widget {
          margin-left: 0;
          &:hover {
            color: darkred;
          }
        }
      }
    }

    .data-source {
      padding: 0;
      margin: 0;
      padding-right: 6px;
      float: right;
      z-index: 1000;
    }

    .widget-category-label {
      float: right;
      width: 13px;
      height: 100%;
    }
  }

  .gs-resize-handle {
    z-index: 1002;
  }

  .widget-body {
    transform-origin: left top;
    height: 100%;
    padding: 7px 15px;

    .resizing-cover {
      position: absolute;
      top: 0;
      bottom: -20px; /* For the title bar */
      left: 0;
      right: 0;
      z-index: 1000;
      background-color: rgba(255, 255, 255, 0.8);
    }
  }

  .selecting-cover {
    z-index: 1005;
    background-color: rgba(100, 100, 100, 0.5);
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    cursor: pointer;

    .select-check {
      position: absolute;
      right: 20px;
      top: 25px;

      label::before {
        box-shadow: 0 0 20px 0px white;
      }
      input[type="checkbox"]:checked + label::before {
        box-shadow: 0 0 10px 2px white;
      }
    }
  }
}

.popover {
  max-width: 400px;

  .close {
    position: absolute;
    top: 6px;
    right: 10px;
  }
}

.widget-info {
  font-size: 0.9em;
}

